Fix icon rendering and mobile nav overflow

--- a/src/assets/css/components.css
+++ b/src/assets/css/components.css
@@ -883,6 +883,7 @@ form ::-moz-focus-inner {
     #nav {
         height: var(--nav-height-small);
         line-height: var(--nav-height-small);
+        overflow: hidden;
     }
 
     #nav a {
